<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <PreferenceCategory android:title="General">
        <SwitchPreferenceCompat
            android:key="notifications"
            android:title="Enable message notifications" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Modes">
        <SwitchPreferenceCompat
            android:key="modes_preference"
            android:title="No Image Mode" />

        <ListPreference
            android:defaultValue="@string/settings_order_by_default"
            android:entries="@array/settings_order_by_labels"
            android:entryValues="@array/settings_order_by_values"
            android:key="@string/settings_order_by_key"
            android:title="@string/settings_order_by_label" />

        <EditTextPreference
            android:defaultValue="@string/settings_min_magnitude_default"
            android:inputType="numberDecimal"
            android:key="@string/settings_min_magnitude_key"
            android:selectAllOnFocus="true"
            android:title="@string/settings_min_magnitude_label" />
    </PreferenceCategory>
    <PreferenceCategory android:title="About">
        <Preference
            android:key="feedback"
            android:summary="Report technical issues or suggest new features"
            android:title="Send feedback" />
    </PreferenceCategory>
</PreferenceScreen>